@@ -23,6 +23,9 @@ Package=<4>
     Begin Project Dependency
     Project_Dep_Name tifiles2
     End Project Dependency
+    Begin Project Dependency
+    Project_Dep_Name ticonv
+    End Project Dependency
 }}}
 
 ###############################################################################
@@ -68,6 +71,21 @@ Package=<4>
     Begin Project Dependency
     Project_Dep_Name tifiles2
     End Project Dependency
+    Begin Project Dependency
+    Project_Dep_Name ticonv
+    End Project Dependency
+}}}
+
+###############################################################################
+
+Project: "ticonv"=..\..\..\ticonv\build\msvc\ticonv.dsp - Package Owner=<4>
+
+Package=<5>
+{{{
+}}}
+
+Package=<4>
+{{{
 }}}
 
 ###############################################################################
@@ -80,6 +98,9 @@ Package=<5>
 
 Package=<4>
 {{{
+    Begin Project Dependency
+    Project_Dep_Name ticonv
+    End Project Dependency
 }}}
 
 ###############################################################################
