@@ -238,18 +238,18 @@ STDMETHODIMP TiEmuOLE::execute_command(BSTR command, VARIANT_BOOL *ret)
     gchar *temp;
 #ifdef __GNUC__
     char ti[SysStringLen(command)+1];
-    utf16_to_ti((const unsigned short *)command,ti);
+	ticonv_charset_utf16_to_ti_s(CALC_TI92, (const unsigned short *)command, ti);
     temp=g_strconcat("\f",ti,"\r",NULL);
     result=ti68k_kbd_push_chars(temp);
 #elif defined(_MSC_VER)
 	char *ti=(char *)malloc(SysStringLen(command)+1);
-    utf16_to_ti((const unsigned short *)command,ti);
+	ticonv_charset_utf16_to_ti_s(CALC_TI92, (const unsigned short *)command, ti);
     temp=g_strconcat("\f",ti,"\r",NULL);
     result=ti68k_kbd_push_chars(temp);
     free(ti);
 #else
     char *ti=std::malloc(SysStringLen(command)+1);
-    utf16_to_ti((const unsigned short *)command,ti);
+    ticonv_charset_utf16_to_ti_s(CALC_TI92, (const unsigned short *)command, ti);
     temp=g_strconcat("\f",ti,"\r",NULL);
     result=ti68k_kbd_push_chars(temp);
     std::free(ti);
