@@ -40,7 +40,8 @@
 #else
 # define TIEMU_VERSION VERSION
 #endif
-#define TIEMU_REQUIRES_LIBFILES_VERSION		"0.0.1"
+#define TIEMU_REQUIRES_LIBCONV_VERSION		"0.0.1"
+#define TIEMU_REQUIRES_LIBFILES_VERSION		"0.0.9"
 #define TIEMU_REQUIRES_LIBCABLES_VERSION	"0.0.1"
 #define TIEMU_REQUIRES_LIBCALCS_VERSION 	"0.0.1"
 
