@@ -135,7 +135,8 @@ SubVersion: $Id$
 	- [kevin] $1981: added enter_debugger command to the OLE interface
 	- [roms]  $1987: fixing bug #1434625: display a better error message when attempting to load a state image targeted for another hand-held model (backported changes from TiEmu2 rev. 1986).
 	- [roms]  $1989: fixed bug #1434625: allow direct loading of a state image and associated image.
-  - [roms]  $1993: fixed bug in the single Win32 file selector (default folder was not properly set)
+	- [roms]  $1993: fixed bug in the single Win32 file selector (default folder was not properly set)
+	- [roms]  $1994: switched to ticonv library
 	
 	Note: trunk forked into tiemu-debugging-branch at rev. $983 and has been merged back 
 		into the trunk at rev. $1695.	
